--- a/01-react/my-app/package.json
+++ b/01-react/my-app/package.json
@@ -38,6 +38,7 @@
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "tapable": "^1.0.0",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
@@ -46,14 +47,17 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "start:server": "babel-node ssr/index.js",
+    "start:server": "BABEL_ENV=server NODE_ENV=development babel-node ssr/index.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "svg-inline-loader": "^0.8.0",
+    "svg-react-loader": "^0.4.5"
   },
   "jest": {
     "collectCoverageFrom": [
